Bug 248423 - workaround for the config.trim_on_minimize code not using a pref observer, and bug 249585 - createprofile flag doesn't allow user-specified paths